--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "firebase": "^8.10.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^10.1.0",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "socket.io-client": "^3.0.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^3.0.0",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
